# Numtan

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/release-trigger/: v1.0.0
.github/workflows/: ci.yml  publish.yml
docs/: API.md  API.zh-CN.md  INDEX.md  INDEX.zh-CN.md  RELEASE.md  RELEASE.zh-CN.md  USAGE.md  USAGE.zh-CN.md
examples/: python_demo.py
src/: lib.rs
src/api/: callback.rs  derivative.rs  integrate.rs  interpolate.rs  linalg.rs  mod.rs  ode.rs  optimize.rs  polynomial.rs  root.rs  signal.rs  stats.rs  trig.rs  visualize.rs
src/core/: derivative.rs  integrate.rs  interpolate.rs  linalg.rs  mod.rs  ode.rs  optimize.rs  polynomial.rs  root.rs  signal.rs  stats.rs  trig.rs  visualize.rs
tests/: api_surface.py  core.rs  extended.rs  python_smoke.py
