[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "numtan"
version = "0.9.0"
description = "Tangent-centered numerical tools in Rust with Python bindings"
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[tool.maturin]
features = ["python-extension"]
module-name = "numtan"
